2006-01-19  Konstantin Triger <kostat@mainsoft.com>

	* ServletWorkerRequest.jvm.cs: refactoring.

2005-11-28  Robert Jordan  <robertj@gmx.net>

	* SimpleWorkerRequest.cs: fixed MapPath () for the case
	app_virtual_dir.Length == 1 && path.Length == 1.
	* SimpleWorkerRequest.cs: implemented SendResponseFromMemory ().

2005-11-28 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* ApplicationHost.cs: make this work with paths that that
	contain non-ASCII characters. Fixes bug #76807.

2005-11-02  Chris Toshok  <toshok@ximian.com>

	* HostingEnvironment.cs: completely NIE'ed implementation of
	HostingEnvironment, just to get an MS example provider to compile.

2005-11-01 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* ApplicationHost.cs: use the AbsolutePath from the Uri to remove the
	schema prefix if present.

2005-09-27 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* SimpleWorkerRequest.cs: all tests pass now.

2005-09-26 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* ApplicationHost.cs: append a directory separator char to the physical
	path. Fixes bug #76187.

2005-09-21 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* SimpleWorkerRequest.cs: fix GetUriPath() for paths ending in '/'.

2005-09-10  Sebastien Pouliot  <sebastien@ximian.com>

	* AppDomainFactory.cs: Added LinkDemand for Minimal. Added Demand for
	UnmanagedCode on ctor. Added TODO on unimplemented method.
	* ApplicationHost.cs: Added LinkDemand for Minimal. Added Demand for 
	UnmanagedCode on ctor. Removed duplicate null checks.
	* ISAPIRuntime.cs: Fixed inheritance (added MarshalByRefObject and 
	IRegisteredObject) for 2.0. Added LinkDemand for Minimal. Added Demand 
	for UnmanagedCode on ctor.
	* SimpleWorkerRequest.cs: Added LinkDemand and InheritanceDemand (not
	sealed) for Minimal. Added Demands for UnmanagedCode on ctors. Added
	FileIOPermission for PathDiscovery before returning processed paths.

2005-09-10 Gonzalo Paniagua Javier <gonzalo@ximian.com>
